kbctl/kube/ResourceLimits-Pods-App-Life-cycle.yaml
=======================================================================
                APP LIFE CYCLE MANAGEMENT - ResourceLimits
=======================================================================
----------------------------------------------------------
ResourceLimits:  
  ByDefault : each pod can use resources upto 1 vCPU and 512 Mi of RAM 
  
  but these limits can be modified using below tags:
 ---------------------------------------------------------
 #pod-def.yaml
 ---
  apiVersion: v1
  kind: Pod
  metadata:
    name: my-app
  spec:
    containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 8080
        resources:
          requests:
             memory: "1 Gi"
             cpu: 1
          limits:
             memory: "2 Gi"
             cpu: 2
---------------------------------------------------------
